--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
+    </section>
 
-      <div class="text-box">
+    <header class="sub-header home-header">
+      <div class="header-content">
         <h1>Forever Grateful – For Freedom, Sacrifice &amp; Honour</h1>
         <p>Preserving the valor that shaped our world</p>
         <a href="#" class="donate-button">Donate</a>
       </div>
-    </section>
+    </header>
 
     <!-- Video -->
     <div id="video-section" class="grid-con">
