--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <body>
     <section class="header">
       <nav>
-        <a href="index.html"
+        <a id="nav-logo" href="index.html"
           ><img src="images/logo-flower-02.svg" alt="Brothers In Arms Logo"
         /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa fa-times" onclick="hideMenu()"></i>
-          <ul>
+          <ul id="navList">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="history_stories.html">History &amp; Stories</a></li>
