--- a/event_detail.html
+++ b/event_detail.html
@@ -34,7 +34,8 @@
      
      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-     <script type="module" defer src="js/main.js"></script>
+     <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+     <script type="module" defer src="js/home.js"></script>
   </head>
   <body>
     <section class="nav-con">
@@ -51,6 +52,7 @@
             <li><a href="victoriacrosses.html">Victoria Crosses</a></li>
             <li><a href="donors.html">Donors</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="#" class="donate-button">Donate</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
