--- a/article.html
+++ b/article.html
@@ -37,6 +37,8 @@
     />
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+     <script type="module" defer src="js/article.js"></script>
   </head>
   <body>
     <nav id="nav">
@@ -179,7 +181,6 @@
       </div>
     </footer>
 
-    <!-- <script src="js/main.js"></script> -->
-    <script type="module" defer src="js/article.js"></script>
+   
   </body>
 </html>
