--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
       <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+      <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
       <script type="module" defer src="js/contact.js"></script>
   </head>
   <body>
