--- a/donors.html
+++ b/donors.html
@@ -40,6 +40,7 @@
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+    <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="module" defer src="js/donors.js"></script>
   </head>
   <body>
@@ -206,7 +207,7 @@
           </div>
           <div class="donor-story">
             <h3>Sarah Williams</h3>
-            <p class="donation-info">Contributed $3,200 to Plaques & Tribute</p>
+            <p class="donation-info">Contributed $3,200 to Plaques And Tribute</p>
             <blockquote>
               "My grandfather served in this regiment, and donating to this
               memorial is my way of ensuring his sacrifice and those of his
