Donors Dynamic Section
This section is built with Vue, and its dynamic, actual data is pulled from the database.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <article class="blog-card col-span-full m-col-span-6">
           <div class="blog-image">
             <img
-              src="images/clay-sculpture.jpeg"
+              src="images/drone-shot.JPG"
               alt="Preserving Military Heritage"
             />
             <div class="blog-category">Heritage</div>
@@ -221,7 +221,7 @@
         <article class="blog-card col-span-full m-col-span-6">
           <div class="blog-image">
             <img
-              src="images/clay-sculpture.jpeg"
+              src="images/history-1918.jpg"
               alt="Stories from the Front Line"
             />
             <div class="blog-category">Stories</div>
@@ -252,7 +252,7 @@
         <article class="blog-card col-span-full m-col-span-6">
           <div class="blog-image">
             <img
-              src="images/clay-sculpture.jpeg"
+              src="images/story1.jpg"
               alt="The Impact of Military Memorials"
             />
             <div class="blog-category">Memorials</div>
