--- a/index.html
+++ b/index.html
@@ -76,12 +76,32 @@
     <div id="video-section" class="grid-con">
       <h2 class="col-span-full m-col-span-2">Explore Our Journey!</h2>
       <section
-        id="player-container"
-        class="col-span-full m-col-start-4 m-col-end-13"
+        class="player-container video-mobile col-span-full m-col-start-4 m-col-end-13"
       >
         <h3 class="hidden">Video</h3>
         <video class="player" controls preload="metadata">
-          <source src="videos/video.mp4" type="video/mp4" />
+          <source src="videos/mobile-donations.mp4" type="video/mp4" />
+          <source src="videos/video.webm" type="video/webm" />
+          <p>
+            Ooops, something went wrong. You may be using an oudated browser or
+            have javascript disabled.
+          </p>
+        </video>
+        <video class="player video-wedpage" controls preload="metadata">
+          <source src="videos/webpage-size.mp4" type="video/mp4" />
+          <source src="videos/video.webm" type="video/webm" />
+          <p>
+            Ooops, something went wrong. You may be using an oudated browser or
+            have javascript disabled.
+          </p>
+        </video>
+      </section>
+      <section
+        class="player-container video-wedpage col-span-full m-col-start-4 m-col-end-13"
+      >
+        <h3 class="hidden">Video</h3>
+        <video class="player" controls preload="metadata">
+          <source src="videos/webpage-size.mp4" type="video/mp4" />
           <source src="videos/video.webm" type="video/webm" />
           <p>
             Ooops, something went wrong. You may be using an oudated browser or
